Bug 189171 - SystemSettings doesn't remember browser
Summary: SystemSettings doesn't remember browser
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Unassigned bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-04-09 04:19 UTC by Keith Rusler
Modified: 2009-10-08 18:17 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Keith Rusler 2009-04-09 04:19:16 UTC
Version:           4.2.69 (using Devel)
Compiler:          GCC 4.3.3 -march=native -O2 -pipe -ggdb
OS:                Linux
Installed from:    Compiled sources

When setting a custom browser to be used instead of the default browser (Konqueror). It fails to remember the settings. If you set the browser, then hit apply. And then change to another option and go back, it's back to the default settings.
Comment 1 Dario Andres 2009-04-09 15:53:18 UTC
SVN commit 951489 by darioandres:

Fix on WebBrowser component. Now the settings are properly saved and read.
+ Small fixes

BUG: 189171


 M  +6 -5      componentchooserbrowser.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=951489
Comment 2 Richard Bacchetta 2009-10-08 18:17:42 UTC
It is unclear to me how to implement this fix. I am still experiencing it with version 4.3.2