Fix on WebBrowser component. Now the settings are properly saved and read. + Small fixes

BUG: 189171

svn path=/trunk/KDE/kdebase/runtime/; revision=951489